New API Get all courses
