# server/data/requests/create_course_request.go
@@ -1,0 +1,13 @@
+package requests
+
+type CreateCoursesRequest struct {
+	// Id        primitive.ObjectID `json:"id,omitempty"`
+	Name                string `json:"name,omitempty" validate:"required"`
+	Sypnopsis           string `json:"sypnopsis,omitempty" validate:"required"`
+	Duration            string `json:"duration,omitempty" validate:"required"`
+	Status              string `json:"status,omitempty" validate:"required"`
+	VideoSrc            string `json:"videoSrc,omitempty" validate:"required"`
+	VideoDescription    string `json:"videoDescription,omitempty" validate:"required"`
+	MaterialSrc         string `json:"materialSrc,omitempty" validate:"required"`
+	MaterialDescription string `json:"materialDescription,omitempty" validate:"required"`
+}
